infrastructure/storage/juicefs/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: juicefs-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`juicefs.dcxxiv.com`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: juicefs-csi-dashboard
          port: 8088
  tls:
    secretName: juicefs-dashboard-tls
